--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -48,7 +48,7 @@
               </a>
             </div>
             <h1 class="cityModal"></h1>
-            <h1>Description:</h1>
+            <span class="description">Description:</span>
             <article class="descModal">dataModal.description</article>
           </div>
         </div>
