--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -23,7 +23,7 @@
       <a href="./index.html">HOME</a>
       <a href="https://github.com/rprasetya" target="_blank">ABOUT US</a>
       <a href="#findRestCont">FIND YOUR RESTAURANT</a>
-      <a href="fav.html">FAVORITE</a>
+      <a href="#">FAVORITE</a>
     </nav>
   </header>
   <main>
@@ -47,6 +47,7 @@
                 </svg>
               </a>
             </div>
+            <span class="ratingModal">ini rating</span>
             <h1 class="cityModal"></h1>
             <span class="description">Description:</span>
             <article class="descModal">dataModal.description</article>
