--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -23,7 +23,7 @@
       <a href="./index.html">HOME</a>
       <a href="https://github.com/rprasetya" target="_blank">ABOUT US</a>
       <a href="#findRestCont">FIND YOUR RESTAURANT</a>
-      <a href="#">FAVORITE</a>
+      <a href="./fav.html">FAVORITE</a>
     </nav>
   </header>
   <main>
