--- a/src/templates/fav.html
+++ b/src/templates/fav.html
@@ -21,7 +21,7 @@
         <nav>
           <a href="./index.html">HOME</a>
           <a href="https://github.com/rprasetya" target="_blank">ABOUT US</a>
-          <a href="#findRestCont">FIND YOUR RESTAURANT</a>
+          <a href="./index.html#findRestCont">FIND YOUR RESTAURANT</a>
           <a href="./fav.html">FAVORITE</a>
         </nav>
     </header>
