--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -40,6 +40,7 @@
           </div>
           <div class="content">
             <div class="linkAddFav">
+              <a class="goToDetailBtn">Get To See Detail >>></a>
               <a href="#" class="addFav">
                 Add To Favorite
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024" class="icon" version="1.1">
@@ -49,7 +50,7 @@
             </div>
             <h1 class="cityModal"></h1>
             <span class="description">Description:</span>
-            <article class="descModal">dataModal.description</article>
+            <article class="descModal"></article>
           </div>
         </div>
       </div>
