--- a/src/styles/fav.css
+++ b/src/styles/fav.css
@@ -125,7 +125,7 @@ main{
   flex-direction: column;
   align-items: center;
   padding-top: 5vw;
-  gap: 90px;
+  gap: 150px;
 }
 .contentFav{
   color: var(--bg-darker);
@@ -143,6 +143,16 @@ main{
 .nameRest{
   font-size: 3.8vw;
   font-family: var(--font-1);
+}
+.ratingCont{
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  font-size: 2.8vw;
+}
+.ratingCont svg{
+  width: 3vw;
+  fill: var(--bg-darker);
 }
 .contentCont{
   display: flex;
@@ -170,22 +180,14 @@ main{
 .pic{
   width: 50%;
 }
+.pic .contentCont{
+  text-align: justify;
+}
 .pic img{
   width: 100%;
+  margin-bottom: 20px;
 }
 /* CONTENT END */
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* FOOTER */
 footer{
