--- a/src/templates/fav.html
+++ b/src/templates/fav.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../styles/fav.css">
     <title>Restaurants Apps - Favorite</title>
 </head>
-<body>
+<body class="bodyFav">
     <header>
         <h1>
           <span>FIND</span>
@@ -25,7 +25,7 @@
           <a href="./fav.html">FAVORITE</a>
         </nav>
     </header>
-    <main>
+    <main class="mainFav">
         <section class="titleFav">
             <h1 class="logo">
                 <span>FIND</span>
@@ -37,7 +37,6 @@
 
         <section class="contentFavCont">
         </section>
-
     </main>
     <footer>
         <div class="footerContent">
