--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="../styles/main.css">
   <title>Restaurant Apps</title>
 </head>
-<body>
+<body class="bodyIndex">
   <header>
     <a class="skip" href="#findRestCont">Skip To Content </a>
     <h1>
@@ -26,7 +26,7 @@
       <a href="./fav.html">FAVORITE</a>
     </nav>
   </header>
-  <main>
+  <main class="mainIndex">
 
     <section class="modalsCont">
       <div class="modal">
