--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -38,7 +38,7 @@
 html{
   scroll-behavior: smooth;
 }
-body{
+.bodyIndex{
   background-color: var(--bg-darker);
   color: var(--color);
 }
@@ -114,7 +114,7 @@ header nav a:hover{
 }
 
 /* HOME */
-main{
+.mainIndex{
   display: flex;
   flex-direction: column;
   align-items: center;
