--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -6,15 +6,43 @@
     <link rel="stylesheet" href="../styles/detail.css">
     <title>Restaurants Apps - Detail</title>
 </head>
-<body>
-    <header>
+<body class="bodyDetail">
+    <header class="headerDetail">
         <a href="./index.html">
-            <svg xmlns="http://www.w3.org/2000/svg" width="800px" height="800px" viewBox="0 0 512 512"><defs><style>.cls-1{fill:none;stroke:#000000;stroke-linecap:round;stroke-linejoin:round;stroke-width:20px;}</style></defs><g data-name="Layer 2" id="Layer_2"><g data-name="E416, back, Media, media player, multimedia, player" id="E416_back_Media_media_player_multimedia_player"><circle class="cls-1" cx="256" cy="256" r="246"/><polyline class="cls-1" points="333.82 100.37 178.18 256 333.82 411.63"/></g></g></svg>
-            Back To Home
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><defs><style>.cls-1{fill:none;stroke:#000000;stroke-linecap:round;stroke-linejoin:round;stroke-width:20px;}</style></defs><g data-name="Layer 2" id="Layer_2"><g data-name="E416, back, Media, media player, multimedia, player" id="E416_back_Media_media_player_multimedia_player"><circle class="cls-1" cx="256" cy="256" r="246"/><polyline class="cls-1" points="333.82 100.37 178.18 256 333.82 411.63"/></g></g></svg>
+            <span>BACK TO HOME</span>
         </a>
     </header>
-    <main>
-        <section class="tes"></section>
+    <main class="mainDetail">
+        <section class="detailCont">
+            <div class="detailTitle">
+                <span>DETAIL OF</span>
+                <h1></h1>
+            </div>
+            <div class="picDetail">
+                <img class="imgDetail" src="" alt="">
+            </div>
+            <div class="detailContent">
+                <span class="adrCityDetail"></span>
+                <div class="descDetail">
+                    <span>DESCRIPTION:</span>
+                    <span class="desc"></span>
+                </div>
+                <div class="menus">
+                    <div class="foodsDetail">
+                        <h2>FOODS MENU</h2>
+                        <span class="food"></span>
+                    </div>
+                    <div class="drinksDetail">
+                        <h2>DRINKS MENU</h2>
+                        <span class="drink"></span>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- <section class="reviewsCont">
+            <div class="review"></div>
+        </section> -->
     </main>
 <script src="../scripts/detail.js"></script>
 </body>
