--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -40,9 +40,11 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="reviewsCont">
-            <div class="review"></div>
-        </section> -->
+        <section class="reviewTitle">
+            <h2> CUSTOMERS REVIEWS</h2>
+        </section>
+        <section class="reviewsCont">
+        </section>
     </main>
 <script src="../scripts/detail.js"></script>
 </body>
