--- a/src/templates/fav.html
+++ b/src/templates/fav.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/fav.css">
-    <title>Restaurants Apps - Favorite</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <link rel="stylesheet" href="fav.css"> -->
+  <title>Restaurants Apps - Favorite</title>
 </head>
 <body class="bodyFav">
     <header>
