--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/main.css">
+  <!-- <link rel="stylesheet" href="main.css"> -->
+  <link rel="manifest" href="app.webmanifest">
   <title>Restaurant Apps</title>
 </head>
 <body class="bodyIndex">
