--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="modalContent">
           <div class="image">
-            <img src="https://restaurant-api.dicoding.dev/images/large/22" alt="">
+            <img class="lazyload" data-src="https://restaurant-api.dicoding.dev/images/large/22" alt="">
           </div>
           <div class="content">
             <div class="linkAddFav">
