--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -56,7 +56,7 @@
       </div>
     </section>
 
-    <section class="homeCont" id="homeCont">
+    <section class="homeCont" id="homeCont" loading="lazy">
       <h1>Find Restaurant Apps</h1>
     </section>
 
