--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -19,7 +19,10 @@
                 <h1></h1>
             </div>
             <div class="picDetail">
-                <img class="imgDetail" src="" alt="">
+                <picture>
+                    <source media="(max-width: 768px)" srcset="">
+                    <img class="imgDetail" src="" alt="">
+                </picture>
             </div>
             <div class="detailContent">
                 <span class="adrCityDetail"></span>
