--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="detail.html">
     <title>Restaurants Apps - Detail</title>
 </head>
 <body class="bodyDetail">
