--- a/src/templates/fav.html
+++ b/src/templates/fav.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="fav.css"> -->
+  <link rel="stylesheet" href="fav.css">
   <title>Restaurants Apps - Favorite</title>
 </head>
 <body class="bodyFav">
