--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="manifest" href="app.webmanifest">
+  <link rel="stylesheet" href="main.css">
   <title>Restaurant Apps</title>
 </head>
 <body class="bodyIndex">
