--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -21,8 +21,8 @@
             </div>
             <div class="picDetail">
                 <picture>
-                    <source media="(max-width: 768px)" srcset="">
-                    <img class="imgDetail" src="" alt="">
+                    <source media="(max-width: 768px)" class="lazyload" srcset="" type="image/jpeg">
+                    <img class="imgDetail lazyload" alt="" loading="lazy" type="image/jpeg">
                 </picture>
             </div>
             <div class="detailContent">
